--- a/Django/myDjango01/myapp01/templates/board/detail1.html
+++ b/Django/myDjango01/myapp01/templates/board/detail1.html
@@ -14,7 +14,7 @@
     content : {{dto.content}} <br />
     date : {{dto.post_date}} <br />
     file : {{dto.filename}} <br />
-    <a href="">수정</a>
+    <a href="/update_form/{{dto.idx}}">수정</a>
     <a href="/delete/{{dto.idx}}/">삭제</a>
 </body>
 </html>
