--- a/Django/myDjango01/myapp01/templates/board/list.html
+++ b/Django/myDjango01/myapp01/templates/board/list.html
@@ -35,7 +35,7 @@
                 <td>{{board.filename}}</td>
                 <td>
                     {% if board.filesize > 0 %}
-                    <span class="_imgs" data-url="/download_count?idx={{board.idx}}"
+                    <span class="_imgs" data-url="/download_count?idx={{board.idx}}">
                     <img src="{% static '/images/file.jpg' %}" />
                     </span>
                     {% endif %}
@@ -52,7 +52,7 @@
             url: $(this).data('url'), // $(this).attr('data-url')
             type: 'GET',
             success: function(data) {
-                alert(data.count);
+                // alert(data.count);
                 _imgs.parents().find('.downCnt').text(data.count)
                 location.href="/download?idx="+data.idx
             }
