--- a/Django/myDjango01/myapp01/templates/board/update.html
+++ b/Django/myDjango01/myapp01/templates/board/update.html
@@ -8,11 +8,13 @@
 <body>
     <h3>Update</h3>
     <form action="/update/" method="post" enctype="multipart/form-data">
+        <!-- {% csrf_token %}/ -->
+        <input type="hidden" name="idx" value="{{dto.idx}}">
         writer: <input type="text" name="writer" value="{{dto.idx}}"><br />
         title: <input type="text" name="title" value="{{dto.title}}"><br />
         content: <textarea name="content" rows="5" cols="50">{{dto.content}}</textarea><br />
         file: <input type="file" name="file">{{dto.filename}}<br />
-        <input type="submit" value="글쓰기">
+        <input type="submit" value="수정하기">
     </form>
 
 </body>
