--- a/Django/myDjango01/myapp01/templates/board/detail.html
+++ b/Django/myDjango01/myapp01/templates/board/detail.html
@@ -6,25 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Detail // <a href="/list">LIST</a></h3>
-    ID : {{dto.idx}} <br />
-    hit : {{dto.hit}} <br />
-    title : {{dto.title}} <br />
-    writer : {{dto.writer}} <br />
-    content : {{dto.content}} <br />
-    date : {{dto.post_date}} <br /> <!-- post_date 뒤에 |time: 'Y-m-d H:i' : 시간포맷 변경할 때 추가-->
-    file : {{dto.filename}} <br />
-    <a href="/update_form/{{dto.idx}}">수정</a>
-    <a href="/delete/{{dto.idx}}/">삭제</a>
-    <br/><br/>
+    <h3>Detail  // <a href="/list">LIST</a> </h3>
+    id : {{dto.idx}}<br/>
+    hit :{{dto.hit}} <br/>
+    title : {{dto.title}}<br/>
+    writer : {{dto.writer}}<br/>
+    content :{{dto.content}} <br/>
+    date :{{dto.post_date}} <br/>
+    file :{{dto.filename}} <br/>
+    <a href="/update_form/{{dto.idx}}">수정</a> 
+    <a href="/delete/{{dto.idx}}">삭제</a>
 
-    <h4>Comment</h4>
-    <form action="/comment/insert/" method="post">
+    <br/>
+    <h4>Comment({{commentCnt}})</h4>
+    <form action="/comment_insert/" method="post">
         <input type="hidden" name="idx" value="{{dto.idx}}" />
-        <textarea name="content" rows="5" cols="50" placeholder="Comment_insert">
-        </textarea>
+        <textarea name="content" rows="5" cols="50" 
+        placeholder="Comment_insert"></textarea>
+        <input type="submit" value="댓글전송" />
     </form>
-    <button type="submit" value="댓글전송"></button>
-
+    <br/>
+    <!-- writer, post_date, content 출력   -->
+    {% for comment in commentList %}
+        {{comment.writer}}  //  {{comment.post_date | date:"Y-m-d"}} // {{comment.content}}<br/>
+    {% endfor %}
+   
 </body>
 </html>
