--- a/Django/myDjango01/myapp01/templates/board/list.html
+++ b/Django/myDjango01/myapp01/templates/board/list.html
@@ -8,7 +8,17 @@
     <script src="{% static 'jquery-3.7.1.min.js' %}"></script>
 </head>
 <body>
-    <h3>LIST // <a href="/write_form/">Insert</a></h3>
+    <h3>LIST({{boardCount}}) // <a href="/write_form/">Insert</a></h3>
+    <form action="/list" method="get">
+        <select name="field" id="field">
+            <option value="title">제목</option>
+            <option value="writer">작성자</option>
+            <option value="content">내용</option>
+            <option value="all">제목+작성자+내용</option>
+        </select>
+        <input type="text" name="word" placeholder="Search" value="{{word}}" />
+        <input type="submit" value="검색" />
+    </form>
     <table border="1">
         <thead>
             <tr>
