--- a/Django/myDjango01/myapp01/templates/board/list.html
+++ b/Django/myDjango01/myapp01/templates/board/list.html
@@ -8,17 +8,18 @@
     <script src="{% static 'jquery-3.7.1.min.js' %}"></script>
 </head>
 <body>
-    <h3>LIST({{boardCount}}) // <a href="/write_form/">Insert</a></h3>
+    <h3>LIST({{boardCount}}) // <a href="/write_form">Insert</a></h3>
     <form action="/list" method="get">
         <select name="field" id="field">
-            <option value="title">제목</option>
-            <option value="writer">작성자</option>
-            <option value="content">내용</option>
-            <option value="all">제목+작성자+내용</option>
+          <option value="title">제목</option>
+          <option value="writer">작성자</option>
+          <option value="content">내용</option>
+          <option value="all">제목+작성자+내용</option>
         </select>
-        <input type="text" name="word" placeholder="Search" value="{{word}}" />
-        <input type="submit" value="검색" />
-    </form>
+        <input type="text" name="word" placeholder="Search"/>
+        <input type="submit" value="검색"  />
+    </form>    
+    <br/>
     <table border="1">
         <thead>
             <tr>
@@ -33,41 +34,70 @@
             </tr>
         </thead>
         <tbody>
-            {% for board in boardList %} <!-- Django에서의 반복문 시작 -->
+        {% for  board  in  boardList  %}    
             <tr>
                 <td>{{board.idx}}</td>
                 <td><a href="/detail_idx?idx={{board.idx}}">{{board.title}}</a>
-                 // <a href="/detail/{{board.idx}}">{{board.title}}</a>
+                // <a href="/detail/{{board.idx}}">{{board.title}}</a>
+                
                 </td>
                 <td>{{board.writer}}</td>
-                <td>{{board.post_date}}</td>
+                <td>{{board.post_date|date:'Y-m-d  H:i'}}</td>
                 <td>{{board.hit}}</td>
                 <td>{{board.filename}}</td>
                 <td>
-                    {% if board.filesize > 0 %}
+                    {% if board.filesize > 0 %}   
                     <span class="_imgs" data-url="/download_count?idx={{board.idx}}">
-                    <img src="{% static '/images/file.jpg' %}" />
-                    </span>
+                        <img src="{% static 'images/file.jpg' %}">
+                    </span>     
                     {% endif %}
-                    <td class="downCnt">{{board.down}}
                 </td>
+                <td class="downCnt">{{board.down}}</td>
+                
             </tr>
-            {% endfor %} <!-- Django에서의 반복문 종료 -->
+        {% endfor %}    
+
         </tbody>
     </table>
-        <script>
-        $("._imgs").on('click', function(){
-        _imgs = $(this)
-        $.ajax({
-            url: $(this).data('url'), // $(this).attr('data-url')
-            type: 'GET',
-            success: function(data) {
-                // alert(data.count);
-                _imgs.parents().find('.downCnt').text(data.count)
+    <br/><br/>
+   <!-- 이전 -->
+   {% if startPage > blockPage %}
+    <a href='?page={{i}}'>이전</a>
+   {% endif  %}
+   <!-- 페이지번호 -->
+   {% for i in range %}
+    {% if i == currentPage %}
+        [{{i}}]
+    {% else %}    
+        <a href='?page={{i}}'>{{i}}</a>
+    {% endif%}
+    
+   {% endfor %}
+
+   <!-- 다음 -->
+   {% if  endPage  < totPage %}
+    <a href='?page={{endPage|add:1}}'>다음</a> <!-- a href="?page={{{i}|add+1}}">{{i}}</a> 도 사용할 수 있음 -->
+   {% endif  %}
+
+
+
+   <script>
+    $("._imgs").on('click',function(){
+         _imgs = $(this)
+         $.ajax({
+            url:$(this).data('url'),  //$(this).attr('data-url')
+            type:'GET',
+            success:function(data){
+                //alert(data.count)
+                _imgs.parent().parent().find(".downCnt").text(data.count)
                 location.href="/download?idx="+data.idx
             }
-        })
-    })   
-        </script>
+         })
+
+    })
+
+
+
+   </script> 
 </body>
 </html>
