--- a/Django/myDjango02/myapp02/templates/base.html
+++ b/Django/myDjango02/myapp02/templates/base.html
@@ -1,8 +1,12 @@
+<% load static %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" >
+    <script src="{% static 'jquery-3.7.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <title>Document</title>
 </head>
 <body>
@@ -12,12 +16,20 @@
             <a class="nav-link" href="#">Logo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Insert</a>
+            <a class="nav-link" href="/write_form">Insert</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">BoardList</a>
+            <a class="nav-link" href="/list">BoardList</a>
           </li>
         </ul>
       </nav>
+      <br />
+
+      <!-- 기본 템플릿 안에 삽입 될 내용 start-->
+      {% block content %}
+      {% endblock %}
+      <!-- JS start -->
+      {% block script %}
+      {% endblock %}
 </body>
 </html>
