--- a/Django/myDjango02/myapp02/templates/board/insert.html
+++ b/Django/myDjango02/myapp02/templates/board/insert.html
@@ -1,11 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends 'base.html' %}
+
+<div class="container">
+<h2>Insert</h2>
+<form action="/insert/" method="post" enctype="multipart/form-data">
+    <div class="form-group">
+    <input type="text" class="form-control" id="writer" placeholder="Enter writer" name="writer">
+    </div>
+
+    <div class="form-group">
+    <label for="title">Title:</label>
+    <input type="text" class="form-control" id="title" placeholder="Enter title" name="title">
+    </div>
+
+    <div class="form-group">
+    <label for="title">Content:</label>
+    <input type="text" class="form-control" id="content" name="content">
+    </div>
+
+    <div class="form-group">
+    <label for="file">File:</label>
+    <input type="file" class="form-control" id="file" placeholder="Enter File" name="file">
+    </div>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+</div>
+{% endblock %}
