--- a/Django/myDjango02/myapp02/templates/board/insert.html
+++ b/Django/myDjango02/myapp02/templates/board/insert.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% block content %}
 <div class="container">
 <h2>Insert</h2>
 <form action="/insert/" method="post" enctype="multipart/form-data">
@@ -25,4 +26,5 @@
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 </div>
+
 {% endblock %}
