--- a/Django/myDjango02/myapp02/templates/base.html
+++ b/Django/myDjango02/myapp02/templates/base.html
@@ -1,4 +1,4 @@
-<% load static %>
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +10,10 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-light">
+    <nav class="navbar navbar-expand-sm bg-success navbar-dark">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Logo</a>
+            <a class="nav-link" href="#"><b>Logo</b></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/write_form">Insert</a>
