--- a/Django/myDjango02/myapp02/templates/base.html
+++ b/Django/myDjango02/myapp02/templates/base.html
@@ -21,6 +21,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/list">BoardList</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/signup">Signup</a>
+          </li>
         </ul>
       </nav>
       <br />
