--- a/Django/myDjango02/myapp02/templates/common/signup.html
+++ b/Django/myDjango02/myapp02/templates/common/signup.html
@@ -7,22 +7,25 @@
     {% csrf_token %}
     {% include "form_errors.html" %}
     <div class="form-group">
-    <label for="username">사용자이름</label>
-    <input type="text" class="form-control" id="username" name="username">
+    <label for="username">사용자이름:</label>
+    <input type="text" class="form-control" id="username" name="username"
+    value="{{form.username.value | default_if_none:''}}">
     </div>
 
     <div class="form-group">
-    <label for="password1">비밀번호</label>
-    <input type="password1" class="form-control" id="password" name="password">
+    <label for="password1">비밀번호:</label>
+    <input type="password1" class="form-control" id="password1" name="password1"
+    value="{{form.password1.value}}">
     </div>
 
     <div class="form-group">
-    <label for="password2">비밀번호</label>
-    <input type="password" class="form-control" id="password2" name="password2">
+    <label for="password2">비밀번호확인:</label>
+    <input type="password" class="form-control" id="password2" name="password2"
+    value="{{form.password2.value | default_if_none:''}}">
     </div>
 
     <div class="form-group">
-    <label for="email">이메일</label>
+    <label for="email">이메일:</label>
     <input type="text" class="form-control" id="email" name="email">
     </div>
 
