--- a/Django/myDjango02/myapp02/templates/common/signup.html
+++ b/Django/myDjango02/myapp02/templates/common/signup.html
@@ -14,7 +14,7 @@
 
     <div class="form-group">
     <label for="password1">비밀번호:</label>
-    <input type="password1" class="form-control" id="password1" name="password1"
+    <input type="password" class="form-control" id="password1" name="password1"
     value="{{form.password1.value}}">
     </div>
 
