--- a/Django/myDjango02/myapp02/templates/common/signup.html
+++ b/Django/myDjango02/myapp02/templates/common/signup.html
@@ -12,10 +12,12 @@
     value="{{form.username.value | default_if_none:''}}">
     </div>
 
+    <!-- value="{{form.email.value | default_if_none:''}}"는 유효성검사-->
+
     <div class="form-group">
     <label for="password1">비밀번호:</label>
     <input type="password" class="form-control" id="password1" name="password1"
-    value="{{form.password1.value}}">
+    value="{{form.password1.value | default_if_none:''}}">
     </div>
 
     <div class="form-group">
@@ -27,7 +29,7 @@
     <div class="form-group">
     <label for="email">이메일:</label>
     <input type="text" class="form-control" id="email" name="email"
-    value="{{form.email.value | default_if_none:''}}">
+    value="{{form.email.value | default_if_none:''}}"> 
     </div>
 
     <button type="submit" class="btn btn-primary">회원가입하기</button>
