--- a/Django/myDjango02/myapp02/templates/base.html
+++ b/Django/myDjango02/myapp02/templates/base.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-sm bg-success navbar-dark">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#"><b>Logo</b></a>
+            <a class="nav-link" href="/"><b>Logo</b></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/write_form">Insert</a>
