--- a/Django/myDjango02/myapp02/templates/base.html
+++ b/Django/myDjango02/myapp02/templates/base.html
@@ -4,35 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" >
-    <script src="{% static 'jquery-3.7.1.min.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <title>Document</title>
+    <script src="{% static 'jquery-3.7.1.min.js' %}"></script>
+    <title>Django</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-success navbar-dark">
-        <ul class="navbar-nav">
+  
+    <nav class="navbar navbar-expand-sm bg-danger navbar-dark">
+      <div class="container">
+        <!-- Brand/logo -->
+        <a class="navbar-brand" href="/">HOME</a>
+        
+        <!-- Links -->
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/"><b>Logo</b></a>
+            <a class="nav-link" href="/write_form">INSERT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/write_form">Insert</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/list">BoardList</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/signup">Signup</a>
+            <a class="nav-link" href="/list">BoardLIST</a>
           </li>
         </ul>
-      </nav>
-      <br />
 
-      <!-- 기본 템플릿 안에 삽입 될 내용 start-->
-      {% block content %}
-      {% endblock %}
-      <!-- JS start -->
-      {% block script %}
-      {% endblock %}
+        <ul class="navbar-nav">
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">로그아웃({{user.username}})</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="/login">로그인</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/signup">회원가입</a>
+            </li>
+        {% endif %}
+        </ul>
+      </div>
+      </nav>
+    <br/>
+    <!-- 기본 템플릿 안에 삽입될 내용  start -->
+    {% block content %}
+    {% endblock %}
+
+    <!-- 자바스크립트  start -->
+    {% block script %}
+    {% endblock %}
+
 </body>
 </html>
