--- a/Django/myDjango02/myapp02/templates/base.html
+++ b/Django/myDjango02/myapp02/templates/base.html
@@ -24,6 +24,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/list">BoardLIST</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/list_page">Board_PAGE</a>
+          </li>
         </ul>
 
         <ul class="navbar-nav">
@@ -41,7 +44,7 @@
         {% endif %}
         </ul>
       </div>
-      </nav>
+    </nav>
     <br/>
     <!-- 기본 템플릿 안에 삽입될 내용  start -->
     {% block content %}
