--- a/Django/myDjango02/myapp02/templates/common/signup.html
+++ b/Django/myDjango02/myapp02/templates/common/signup.html
@@ -13,7 +13,7 @@
         <div class="form-group">
             <label for="password1">비밀번호:</label>
             <input type="password" class="form-control" id="password1" 
-             name="password1" value="{{form.password1.value}}">
+             name="password1" value="{{form.password1.value| default_if_none:''}}">
         </div>
         <div class="form-group">
             <label for="password2">비밀번호확인:</label>
