--- a/Django/myDjango02/myapp02/templates/board/detail.html
+++ b/Django/myDjango02/myapp02/templates/board/detail.html
@@ -37,16 +37,29 @@
     <!-- Comment Insert -->
     <div class="mt-3">
         <form action="/comment_insert/" method="post">
+            <input type="hidden" name="id" value="{{board.id}}" />
             <div class="form-group">
                 <label for="content">Comment:</label>
                 <textarea class="form-control" rows="5"
-                id="content"  name="content"></textarea>
+                id="content"  name="content"></textarea><br/>
             <button type="submit" class="btn btn-success btn-sm">Comment Write</button>
         </form>
+
+        <!-- Comment count -->
+        <div class="mt-3">
+            Comment({{ board.comment_set.count }})
+        </div>
+        <!-- Comment List -->
+            <div>
+            {% for comment in board.comment_set.all %}
+            <span>{{ comment.content }}</span>
+            <span>
+                - {{ comment.writer }}
+                : {{ comment.post_date | date:"Y-m-d" }}
+            </span>
+            </div>
+            {% endfor %}
     </div>
-
-
-
 
 </div>
 
