--- a/Django/myDjango03/myapp03/templates/board/insert.html
+++ b/Django/myDjango03/myapp03/templates/board/insert.html
@@ -6,7 +6,8 @@
     <form action="/insert/" method="post" enctype="multipart/form-data">
       <div class="form-group">
         <label for="writer">Writer:</label>
-        <input type="text" class="form-control" id="writer" placeholder="Enter writer" name="writer">
+        <input type="text" class="form-control" id="writer"
+        placeholder="Enter writer" name="writer" readonly>
       </div>
       <div class="form-group">
         <label for="title">Title:</label>
