--- a/Django/myDjango03/myapp03/templates/base.html
+++ b/Django/myDjango03/myapp03/templates/base.html
@@ -22,10 +22,10 @@
             <a class="nav-link" href="/write_form">INSERT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/list">BoardLIST</a>
+            <a class="nav-link" href="/list">Board(paginator)</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/list_page">Board_PAGE</a>
+            <a class="nav-link" href="/wordcloud">워드클라우드</a>
           </li>
         </ul>
 
