--- a/Django/myDjango03/myapp03/templates/board/insert.html
+++ b/Django/myDjango03/myapp03/templates/board/insert.html
@@ -7,7 +7,7 @@
       <div class="form-group">
         <label for="writer">Writer:</label>
         <input type="text" class="form-control" id="writer"
-        placeholder="Enter writer" name="writer" readonly>
+        value="{{user.username}}" placeholder="Enter writer" name="writer" readonly>
       </div>
       <div class="form-group">
         <label for="title">Title:</label>
