--- a/Django/myDjango03/myapp03/templates/base.html
+++ b/Django/myDjango03/myapp03/templates/base.html
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/wordcloud2">워드클라우드2</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/melon">멜론차트</a>
+          </li>
         </ul>
 
         <ul class="navbar-nav">
