--- a/Django/myDjango03/myapp03/templates/base.html
+++ b/Django/myDjango03/myapp03/templates/base.html
@@ -36,6 +36,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/map">지도</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/moviechart">영화차트</a>
+          </li>
         </ul>
 
         <ul class="navbar-nav">
