--- a/Django/myDjango03/myapp03/templates/bigdata/movie_daum.html
+++ b/Django/myDjango03/myapp03/templates/bigdata/movie_daum.html
@@ -1,27 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-
+<!-- {% get_static_prefix %} /경로/파일명.확장자 -->
 <div class="container my-3">
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <td>제목</td>
-                <td>평점</td>
-                <td>예매율</td>
-            </tr>
-        </thead>
-        <tbody>
-            {% for s in data %}
-            <tr>
-                <td>{{s.title}}</td>
-                <td>{{s.point}}</td>
-                <td>{{s.reserve}}</td>
-            </tr>        
-            {% endfor %}
-        </tbody>
-    </table>
+    <img src="{% get_static_prefix %}images/{{img_data}}" width="800" height="600" >
+   
     
-    </div>    
+</div>    
 
 {% endblock %}
