--- a/Django/myDjango03/myapp03/templates/base.html
+++ b/Django/myDjango03/myapp03/templates/base.html
@@ -37,7 +37,13 @@
             <a class="nav-link" href="/map">지도</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/moviechart">영화차트</a>
+            <a class="nav-link" href="/movie_chart">영화차트</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/movie">영화크롤링(DB)</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/movie_dbchart">영화평점차트(DB)</a>
           </li>
         </ul>
 
