--- a/Django/myDjango03/myapp03/templates/bigdata/movie.html
+++ b/Django/myDjango03/myapp03/templates/bigdata/movie.html
@@ -4,7 +4,15 @@
 
 <!-- {% get_static_prefix %} /경로/파일명.확장자 -->
 <div class="container my-3">
-    <img src="{% get_static_prefix %}images/{{img_data}}" width="800" height="600" >   
+    <img src="{% get_static_prefix %}images/{{img_data}}" width="800" height="600" >
 </div>
+
+{{data}}
+
+<br /><br />
+
+{% for i in data %}
+    {{i.title}} // {{i.point_avg}} <br/>
+{% endfor %}
 
 {% endblock %}
