--- a/Django/myDjango03/myapp03/templates/base.html
+++ b/Django/myDjango03/myapp03/templates/base.html
@@ -45,6 +45,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/movie_dbchart">영화평점차트(DB)</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/weather">날씨</a>
+          </li>
         </ul>
 
         <ul class="navbar-nav">
