--- a/Django/myDjango03/myapp03/templates/bigdata/weather.html
+++ b/Django/myDjango03/myapp03/templates/bigdata/weather.html
@@ -4,14 +4,14 @@
 
 <!-- {% get_static_prefix %} /경로/파일명.확장자 -->
 <div class="container my-3">
-    <img src="{% get_static_prefix %}images/{{img_data}}"
-    width="600" height="400" >
+    <img src="{% get_static_prefix %}images/{{img_data.plot}}"
+    width="800" height="400" >
 
-    <img src="{% get_static_prefix %}images/{{img_data}}"
-    width="600" height="400" >
+    <img src="{% get_static_prefix %}images/{{img_data.bar}}"
+    width="800" height="400" >
     
-    <img src="{% get_static_prefix %}images/{{img_data}}"
-    width="600" height="400" >
+    <img src="{% get_static_prefix %}images/{{img_data.pie}}"
+    width="800" height="400" >
 </div>
 
 {% endblock %}
